# TrafficMeter

./: CMakeLists.txt  README.md  TrafficMeter  functions.cpp  header.h  main.cpp
results/: results.txt
sequences_names/: sequences_names.txt
